--- a/Basics/tasck_01/index.html
+++ b/Basics/tasck_01/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>009 Циклы</title>
+    <title>Tasck_01</title>
 </head>
 <body>
     <script src="script.js"></script>    
