--- a/Basics/basic_007/index.html
+++ b/Basics/basic_007/index.html
@@ -6,6 +6,7 @@
     <title>010 Функции</title>
 </head>
 <body>
-    <script src="script.js"></script>    
+    <!-- <script src="script.js"></script>-->
+    <script src="myscript.js"></script>   
 </body>
 </html>
