--- a/Basics/basic_007/index.html
+++ b/Basics/basic_007/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <!-- <script src="script.js"></script>-->
-    <script src="myscript.js"></script>   
+    <!--<script src="myscript.js"></script>-->
+    <script src="myscript_01.js"></script>   
 </body>
 </html>
