--- a/Basics/basic_009/index.html
+++ b/Basics/basic_009/index.html
@@ -6,6 +6,7 @@
     <title>012 Объекты</title>
 </head>
 <body>
-    <script src="script.js"></script>    
+    <!--<script src="script.js"></script>-->
+    <script src="myscript.js"></script>    
 </body>
 </html>
