Задание 6. Задание на отработку действий со страницей

--- a/Basics/task_02/index.html
+++ b/Basics/task_02/index.html
@@ -19,7 +19,7 @@
      </nav>
    </header>
     <div class="column"></div>
-    <div class="column">
+    <div class="column" id="column">
       <div class="title" id="title"> 
         Мы продаем только технику Apple
       </div>
